# choose_adventure

./: .gitignore  AGENTS.md  LICENSE  README.md  choose_your_own_adventure_story_skill.md  code_review_input.py  pyproject.toml  render.yaml  requirements.txt  test_generation.py  verify_app.py  verify_template.js
.github/workflows/: codeql.yml  docs.yml  lint.yml  test.yml  update-manifest.yml  versioning-and-badges.yml
docs/: index.html  process.html
docs/stories/: manifest.json  moonpaw_kit.json  shadowclan_6333.json  shadowpaw_mission.json  sherlock_holmes.json  themultiverseodyssey_57.json  themysteriousisland_57.json  therustedtrainstatio_57.json  thunderclan_6333.json
src/: adventure_generator.py  app.py  update_manifest.py
src/templates/: story_template.html
tests/: test_generator.py  test_github_integration.py  test_manifest.py
