[project]
name = "adventure-story-generator"
version = "0.2.9"
description = "A choose-your-own-adventure story generator for English learners."
authors = [{ name = "Jules" }]
requires-python = ">=3.11"
dependencies = [
    "gradio",
    "llm-client @ git+https://github.com/dgaida/llm_client.git"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
